--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,23 @@
   display: flex;
   background-color: #F5F7FB;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-  width: 50rem;
-  height: 50rem;
-  margin: 2% auto;
+  width: 30rem;
+  height: 30rem;
+  margin: 3% auto;
   border-radius: 10%;
   box-shadow: 2px 10px 15px rgba(0, 0, 0, 0.15);
 }
 
 .title-text{
   color: #293264;
-  
+  font-size: 3rem;
+  margin-top: 0;
   
 }
 
 .home-btn{
-  width: 30%;
+  width: 100%;
   color: white;
   background: #4D5B9E;
   border-radius: 15px;
@@ -26,3 +26,33 @@
   box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.15);
 }
 
+.home-btn:active{
+  transform: translateY(4px);
+  background-color: #36417c;
+  
+}
+
+.main-title{
+  margin: auto;
+}
+
+.home-img{
+  width: 20%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.home-img2{
+  position: fixed;
+  width: 40%;
+  left: -8%;
+  bottom: -200px;
+}
+
+.home-img1{
+  position: fixed;
+  width: 35%;
+  right: -8%;
+  top: -200px;
+}
