--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.home-div{
+.home-div {
   display: flex;
-  background-color: #F5F7FB;
+  background-color: #f5f7fb;
   justify-content: center;
   align-items: center;
   width: 30rem;
@@ -10,65 +10,94 @@
   box-shadow: 2px 10px 15px rgba(0, 0, 0, 0.15);
   position: relative;
   z-index: 3;
-
 }
 
-.title-text{
+.title-text {
   color: #293264;
   font-size: 3rem;
   margin-top: 0;
-  
 }
 
-.home-btn{
+.home-btn {
   width: 100%;
   color: white;
-  background: #4D5B9E;
+  background: #4d5b9e;
   border-radius: 15px;
   border: 0;
   box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.15);
 }
 
-.home-btn:active{
+.home-btn:active {
   transform: translateY(4px);
   background-color: #36417c;
-  
 }
 
-.main-title{
+.main-title {
   margin: auto;
 }
 
-
-
-.home-img2{
+.home-img2 {
   position: fixed;
   width: 40%;
   left: -8%;
   bottom: -200px;
   z-index: 1;
-
 }
 
-.home-img1{
+.home-img1 {
   position: fixed;
   width: 40%;
   right: -8%;
   top: -200px;
   z-index: 1;
-
 }
 
-.quiz-div{
+.quiz-div {
   z-index: 3;
   position: relative;
-  display: flex;
-  background-color: #F5F7FB;
-  justify-content: center;
-  align-items: center;
+  background-color: #f5f7fb;
   width: 50rem;
   height: 50rem;
   margin: 3% auto;
   border-radius: 10%;
   box-shadow: 2px 10px 15px rgba(0, 0, 0, 0.15);
+  color: #293264;
+  text-align: center;
+}
+
+hr {
+  width: 70%;
+}
+
+.quiz-box {
+  padding: 10%;
+  padding-bottom: 5%;
+  text-align: left;
+}
+
+.choices-btn {
+  color: #293264;
+  width: 100px;
+  height: 30px;
+  margin-right: 4%;
+  border-radius: 10px;
+  border: 0.794239px solid #4d5b9e;
+}
+
+.choices-div {
+  margin: 5% 0;
+}
+
+.check-btn {
+  width: 250px;
+  height: 40px;
+  border-radius: 15px;
+  align-self: center;
+  color: white;
+  border: 0;
+  background-color: #4d5b9e;
+}
+
+.check-btn h3 {
+  margin: 0;
 }
