--- a/src/App.css
+++ b/src/App.css
@@ -71,21 +71,24 @@ hr {
 
 .quiz-box {
   padding: 10%;
-  padding-bottom: 5%;
+  padding-bottom: 1%;
   text-align: left;
 }
 
 .choices-btn {
   color: #293264;
-  width: 100px;
-  height: 30px;
+  min-width: 100px;
   margin-right: 4%;
+  min-height: 30px;
   border-radius: 10px;
   border: 0.794239px solid #4d5b9e;
+  padding: 1%;
 }
 
 .choices-div {
-  margin: 5% 0;
+  display: flex;
+  align-items: center;
+  margin: 4% auto;
 }
 
 .check-btn {
